--- a/arch/arm/boot/dts/qcom/msm8996-gpu.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8996-gpu.dtsi
@@ -1,4 +1,4 @@
-/* Copyright (c) 2015-2016, The Linux Foundation. All rights reserved.
+/* Copyright (c) 2015-2017, The Linux Foundation. All rights reserved.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 and
@@ -102,6 +102,9 @@
 			"mem_clk", "mem_iface_clk", "alt_mem_iface_clk",
 			"mx_clk";
 			
+		/* To disable GPU wake up on touch event */
+		qcom,disable-wake-on-touch;
+
 		/* To disable GPU wake up on touch event */
 		qcom,disable-wake-on-touch;
 
