--- a/arch/arm64/configs/lithium_defconfig
+++ b/arch/arm64/configs/lithium_defconfig
@@ -110,6 +110,7 @@ CONFIG_CPU_FREQ_GOV_CHILL=y
 CONFIG_CPU_FREQ_GOV_CAFACTIVE=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVEX=y
 CONFIG_CPU_BOOST=y
+CONFIG_LAZYPLUG=y
 CONFIG_NET=y
 CONFIG_PACKET=y
 CONFIG_UNIX=y
