msm8996-v3: Let's try to save some battery juice. Signed-off-by: yarost12 <yaro330@gmail.com>
Signed-off-by: AyushR1 <ayushrathore12501@gmail.com>

--- a/arch/arm/boot/dts/qcom/msm8996-v3.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8996-v3.dtsi
@@ -152,6 +152,10 @@
 
 	qcom,disable-busy-time-burst;
 
+	/* Disable wake on touch */
+	qcom,disable-wake-on-touch;
+
+	qcom,disable-busy-time-burst;
 	qcom,gpu-pwrlevel-bins {
 		#address-cells = <1>;
 		#size-cells = <0>;
