--- a/arch/arm64/configs/barokah_defconfig
+++ b/arch/arm64/configs/barokah_defconfig
@@ -395,7 +395,9 @@ CONFIG_SENSORS_QPNP_ADC_CURRENT=y
 CONFIG_THERMAL=y
 CONFIG_THERMAL_TSENS8974=y
 CONFIG_LIMITS_MONITOR=y
-CONFIG_THERMAL_MONITOR=y
+# CONFIG_THERMAL_MONITOR is not use
+# CONFIG_LIMITS_LITE_HW=n
+CONFIG_THERMAL_MONITOR_SIMPLE=y
 CONFIG_THERMAL_QPNP=y
 CONFIG_THERMAL_QPNP_ADC_TM=y
 CONFIG_WCD9330_CODEC=y
