--- a/arch/arm64/configs/barokah_defconfig
+++ b/arch/arm64/configs/barokah_defconfig
@@ -516,7 +516,6 @@ CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ASHMEM=y
 CONFIG_ANDROID_TIMED_GPIO=y
-CONFIG_ANDROID_LOW_MEMORY_KILLER=n
 CONFIG_SW_SYNC_USER=y
 CONFIG_ION=y
 CONFIG_ION_MSM=y
@@ -710,3 +709,8 @@ CONFIG_STATE_NOTIFIER=y
 CONFIG_LAZYPLUG=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_SIMPLE_GPU_ALGORITHM=y
+CONFIG_SUSPEND_NVS=y
+CONFIG_FRANDOM=y
+CONFIG_ANDROID_LOW_MEMORY_KILLER=y
+CONFIG_ANDROID_LOW_MEMORY_KILLER_AUTODETECT_OOM_ADJ_VALUES=y
+CONFIG_HID_ASUS_GAMEPAD=y
