--- a/arch/arm64/configs/barokah_defconfig
+++ b/arch/arm64/configs/barokah_defconfig
@@ -705,7 +705,7 @@ CONFIG_IOSCHED_MAPLE=y
 
 CONFIG_STATE_NOTIFIER=y
 
-CONFIG_LAZYPLUG=y
+CONFIG_LAZYPLUG=n
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_SIMPLE_GPU_ALGORITHM=y
 CONFIG_SUSPEND_NVS=y
